# hackathon-ai-auditor-agent

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AI_Tasks.md  AUTODEPLOY_TEST.md  C4-C9_Auditor_Plan.md  CLAUDE.md  DEPLOYMENT.md  EXTENSIONS_TASKS.md  LICENSE  Makefile  PLAN_ANALYZE_AND_SEND.md  PLAN_CLIENT_ROADMAP.md  PROJECT_STATUS.md  Product_info.md  README.md  TEST_DEPLOY.md  dev.bat  package.json  pnpm-lock.yaml
.claude/: settings.local.json
.cursor/rules/: extension-arch-and-catalog-rules.mdc  extension-browser-api-usage-rules.mdc  extension-chrome-extension-general-rules.mdc  extension-javascript-typescript-code-style.mdc  extension-manifest-and-permissions-rules.mdc  extension-overview-rules.mdc  (+6 more)
.junie/: guidelines.md
backend/: pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py  0b4c3a9d2f10_backend_public_tables.py  1a23b4c5d6e7_add_prompt_fk_to_workflow_runs.py
backend/app/: main.py
backend/app/api/routers/: analysis.py  prompt_base.py
backend/app/core/: config.py  database.py
backend/app/models/: prompts.py
backend/app/pipeline/: __init__.py  contradiction_nodes.py  entropy_nodes.py  error_handling.py  format_nodes.py  graph.py  judge_nodes.py  language_nodes.py  patch_nodes.py  question_nodes.py  vocab_nodes.py
backend/app/schemas/: pipeline.py  prompts.py
backend/app/services/: embeddings.py  llm.py  prompt_base.py
backend_public/: .env.example  Curestry API - Swagger UI.htm  Dockerfile  README.md  docker-compose.yml  openapi.json  pyproject.toml
backend_public/alembic/: env.py
backend_public/alembic/versions/: 20250817_01_initial.py  20250817_02_api_keys.py
backend_public/app/: auth.py  config.py  db.py  deps.py  factory.py  main.py  models.py  observability.py  schemas.py
backend_public/app/api/: admin.py  analysis.py  health.py
backend_public/app/domain/: entities.py  exceptions.py
backend_public/app/dto/: common.py  requests.py  responses.py
backend_public/app/infra/: event_logger.py  pipeline_client.py
backend_public/app/integration/: promptbase_adapter.py
backend_public/app/middleware/: error_handler.py  logging.py
backend_public/app/orm/: models.py  repositories.py
backend_public/app/routers/: auth.py  metrics.py  proxy.py  spec_proxy.py  workflow.py
backend_public/app/services/: analysis_service.py
backend_public/guidelines/: apiguideline.md  backendguideline.md  backendtasks.md  dbguideline.md  dto-alignment.md  rebase.md
backend_public/tests/: test_analysis_endpoints.py  test_analysis_negative.py  test_health_and_metrics.py  test_openapi_docs.py
docs/: AI_Tasks.md  API.md  PROJECT_STATUS.md  Product_info.md  backend_public.md  backendguideline.md  backendtasks.md  curestry_ui_elements.md  dbguideline.md  frontendguideline.md  frontendtasks.md  landingguideline.md  phase-roadmap.md  rebase.md  technical-architecture.md  technical-vision.md
extensions/: README.md  package-vscode.ps1  package.json  pnpm-lock.yaml  tsconfig.base.json
frontend/: .eslintrc.json  .prettierignore  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend_public/: package-lock.json  package.json
infra/: Dockerfile.api  Dockerfile.backend_public  Dockerfile.web  Dockerfile.web-admin  docker-compose.yml  init.sql  openapijson.json
phases/: README.md  phase0-status.md  phase1-status.md  phase2-status.md  phase3-status.md  phase4-status.md  phase5-status.md  phase6-status.md
(+93 files in other folders)
